--- a/test2.html
+++ b/test2.html
@@ -5,7 +5,9 @@
 <h2>HTML Button</h2>
 <p>Hello there!</p>
 
-<button>Click me!</button>
+<a href="https://www.google.com"
+    <button>Click me!</button>
+</a>
 
 </body>
 </html>
