--- a/test2.html
+++ b/test2.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html>
+</head>
+<style>
+.button {
+  background-color: #04AA6D;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+</style>
+</head>
 <body>
 
-<h2>HTML Button</h2>
+<h2>HTML and CSS Button</h2>
 <p>Hello there!</p>
 
-<a href="https://www.google.com"
-    <button>Click me!</button>
-</a>
+
+<a href="https://www.google.com" <button>HTML Button</button></a>
+
+<a href="https://www.google.com" class="button">CSS Button?</a>
 
 </body>
 </html>
