--- a/test2.html
+++ b/test2.html
@@ -3,9 +3,9 @@
 </head>
 <style>
 .button {
-  background-color: #04AA6D;
+  background-color: #aa04aa;
   border: none;
-  color: white;
+  color: rgb(255, 0, 0);
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -18,13 +18,15 @@
 </head>
 <body>
 
-<h2>HTML and CSS Button</h2>
+<h2>HTML and CSS Buttons</h2>
 <p>Hello there!</p>
 
 
 <a href="https://www.google.com" <button>HTML Button</button></a>
 
-<a href="https://www.google.com" class="button">CSS Button?</a>
+<a href="https://www.google.com" class="button">CSS Button 2</a>
+
+<a href="https://www.youtube.com" class="button">CSS Button 2</a>
 
 </body>
 </html>
