--- a/Home.html
+++ b/Home.html
@@ -16,6 +16,9 @@
 }
 </style>
 </head>
+<head>
+  <link rel="stylesheet" href="CSS/stylesheet.css"> 
+</head>
 <body>
 
 <h2>HTML and CSS Buttons</h2>
