--- a/test.html
+++ b/test.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Website</title>
   <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
 <body>
-
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-
+  <h1>Hello, World!</h1>
+  <p>This is a simple example.</p>
 </body>
 </html>
