--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Simple Website - Home</title>
+  <title>About Us</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to My Simple Website</h1>
+    <h1>About Us</h1>
   </header>
 
   <nav>
@@ -18,7 +18,7 @@
   </nav>
 
   <main>
-    <p>This is the homepage! Click the buttons above to navigate the site.</p>
+    <p>This is the about page. Here you can put information about your website.</p>
   </main>
 
   <footer>
