--- a/index.html
+++ b/index.html
@@ -14,15 +14,25 @@
   <nav>
     <button onclick="location.href='index.html'">Home</button>
     <button onclick="location.href='about.html'">About</button>
+    <button onclick="location.href='ballroomdancing.html'">Ballroom Dancing</button>
+    <button onclick="location.href='zouk.html'">Zouk</button>
+    <button onclick="location.href='weddings.html'">Weddings</button>
+    <button onclick="location.href='essentricstretch.html'">Essentric Stretch Classes</button>
+    <button onclick="location.href='dancefitness.html'">Dance Fitness</button>
     <button onclick="location.href='contact.html'">Contact</button>
+
   </nav>
 
   <main>
-    <p>This is the homepage! Click the buttons above to navigate the site.</p>
+    <p>
+      Established in 2010
+      OWNERS:
+      Ray Garcia (979) 255-7211
+      Shelly Gallaway (979) 393-2411</p>
   </main>
 
   <footer>
-    <p>&copy; 2025 My Simple Website</p>
+    <p>&copy; 2025 TEST</p>
   </footer>
 </body>
 </html>
