--- a/zouk.html
+++ b/zouk.html
@@ -24,7 +24,7 @@
   </header>
 
   <section class="hero">
-    <img src="assets/images/zouk-hero.jpg" alt="Zouk Dance">
+    <img src="assets/images/zouk.jpg" alt="Zouk Dance">
     <div class="hero-text">
       <h2>Welcome to the World of Zouk</h2>
       <p>Experience the rhythm and passion of Zouk dancing.</p>
