--- a/zouk.html
+++ b/zouk.html
@@ -39,10 +39,10 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 My Simple Website</p>
+    <p>&copy; 2025 Brazos Ballroom Dance</p>
     <div class="social-media">
       <a href="https://facebook.com" target="_blank">Facebook</a>
-      <a href="https://twitter.com" target="_blank">Twitter</a>
+      <a href="https://tiktok.com" target="_blank">Tiktok</a>
       <a href="https://instagram.com" target="_blank">Instagram</a>
     </div>
   </footer>
