--- a/calendar.html
+++ b/calendar.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zouk</title>
+  <title>Calendar</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
-    <h1>Zouk</h1>
+    <h1>Calendar</h1>
     <nav>
         <button onclick="location.href='index.html'">Home</button>
         <button onclick="location.href='about.html'">About</button>
         <button onclick="location.href='ballroomdancing.html'">Ballroom Dancing</button>
-        <button onclick="location.href='zouk.html'">Zouk</button>
+        <button onclick="location.href='calendar.html'">Calendar</button>
         <button onclick="location.href='weddings.html'">Weddings</button>
         <button onclick="location.href='essentricstretch.html'">Essentric Stretch Classes</button>
         <button onclick="location.href='dancefitness.html'">Dance Fitness</button>
