--- a/dancefitness.html
+++ b/dancefitness.html
@@ -15,7 +15,7 @@
     <button onclick="location.href='index.html'">Home</button>
     <button onclick="location.href='about.html'">About</button>
     <button onclick="location.href='ballroomdancing.html'">Ballroom Dancing</button>
-    <button onclick="location.href='zouk.html'">Zouk</button>
+    <button onclick="location.href='calendar.html'">Calendar</button>
     <button onclick="location.href='weddings.html'">Weddings</button>
     <button onclick="location.href='essentricstretch.html'">Essentric Stretch Classes</button>
     <button onclick="location.href='dancefitness.html'">Dance Fitness</button>
