--- a/calendar.html
+++ b/calendar.html
@@ -21,22 +21,19 @@
       </nav>
   </header>
 
-  <section class="hero">
+  <section class="picture">
     <img src="assets/images/zouk.jpg" alt="Zouk Dance">
-    <div class="hero-text">
-      <h2>Welcome to the World of Zouk</h2>
-      <p>Experience the rhythm and passion of Zouk dancing.</p>
-    </div>
   </section>
 
   <main>
-    <section class="zouk-info">
-      <h2>About Zouk</h2>
-      <p>Zouk is a genre of dance originating from the Caribbean islands. It is known for its smooth and flowing movements, often danced to a slow- to medium-tempo music.</p>
-      <p>Join our classes to learn more about this beautiful dance form and become a part of our vibrant community.</p>
+    <section class="embedded-calendar">
+      <h2>Lessons & Special Events</h2>
+      <p>If you want to stay up to date on our upcoming events, sign up for our newsletter!</p>
     </section>
 
   </main>
+
+  <iframe src="https://calendar.google.com/calendar/embed?src=jasonstewart365%40gmail.com&ctz=UTC" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
   <footer>
     <p>&copy; 2025 Brazos Ballroom Dance</p>
