--- a/calendar.html
+++ b/calendar.html
@@ -33,8 +33,8 @@
 
   </main>
 
-  <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=1&ctz=America%2FChicago&showPrint=0&src=amFzb25zdGV3YXJ0MzY1QGdtYWlsLmNvbQ&color=%23039BE5" style="border:solid 1px #777" width="1000" height="800" frameborder="0" scrolling="no"></iframe>
-  
+  <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=1&ctz=UTC&showPrint=0&title=Test&src=amFzb25zdGV3YXJ0MzY1QGdtYWlsLmNvbQ&color=%23039BE5" style="border:solid 1px #777" width="1000" height="800" frameborder="0" scrolling="no"></iframe>
+    
   <footer>
     <p>&copy; 2025 Brazos Ballroom Dance</p>
     <div class="social-media">
