--- a/calendar.html
+++ b/calendar.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calendar</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <style>.center {
+    text-align: center;
+    border: 3px solid green;
+  }
+  </style>
 </head>
 <body>
   <header>
@@ -26,7 +31,7 @@
   </section>
 
   <main>
-    <section class="embedded-calendar">
+    <div class="center">
       <h2>Lessons & Special Events</h2>
       <p>If you want to stay up to date on our upcoming events, sign up for our newsletter!</p>
     </section>
@@ -36,7 +41,7 @@
   <div align="center">
   <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=1&ctz=UTC&showPrint=0&title=Test&src=amFzb25zdGV3YXJ0MzY1QGdtYWlsLmNvbQ&color=%23039BE5" style="border:solid 1px #777" width="1000" height="800" frameborder="0" scrolling="no"></iframe>
   </div>
-  
+
   <footer>
     <p>&copy; 2025 Brazos Ballroom Dance</p>
     <div class="social-media">
