--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <button onclick="location.href='essentricstretch.html'">Essentric Stretch Classes</button>
     <button onclick="location.href='dancefitness.html'">Dance Fitness</button>
     <button onclick="location.href='contact.html'">Contact</button>
+    <button onclick="location.href='testpage.html'">testpage</button>
 
   </nav>
 
