--- a/index.html
+++ b/index.html
@@ -25,11 +25,28 @@
   </nav>
 
   <main>
-    <p>
-      Established in 2010
-      OWNERS:
-      Ray Garcia (979) 255-7211
-      Shelly Gallaway (979) 393-2411</p>
+    <div class="center">
+      <h2>Welcome to Brazos Ballroom Dance Studio!</h2>
+      <p>Ready to dance?  Ready to learn to dance?  Looking for a place to dance?  Ready to learn more dances or sharpen your dance skills?
+        We are here and ready to teach you !!!  We are here to help you reach your dance goals.</p>
+      
+      <h2>Learn to Dance:</h2>
+      <p>Country Western Polka, Two Step, Triple Step, Half Step,Cha Cha, Salsa, Mambo, Tango, Waltz, Foxtrot, Viennese Waltz, Quick Step, Hustle, Merengue, Bachata, Kizomba, Bolero, Rumba, Paso Doble, Swing, Jive, East Coast Swing, West Coast Swing, Samba, 
+        Wedding Dances and All First Dance & Wedding Party Choreography...and MORE....!!!</p>
+
+      <h2>COME GET HEALTHY!!</h2>
+      <p>Essentrics with Shelly &  Jonelle
+        Increase STRENGTH, FITNESS, BALANCE, FLEXIBILITY & JOINT HEALTH
+        An Innovative Way to Exercise!!!</p>
+
+      <h2>We are located in College Station, Texas</h2>
+      <p>501 Graham Rd
+        College Station, Texas 77845
+        www.brazosballroomdance.com</p>
+
+      <p>We teach Private and Group Lessons.  We host Dance Practice Parties and Dance Showcases. Want to be a competitive dancer?  Sign up now and set your goals into ACTION! </p>
+    </section>
+
   </main>
 
   <footer>
