--- a/weddings.html
+++ b/weddings.html
@@ -23,7 +23,30 @@
   </nav>
 
   <main>
-    <p>This is the contact page. Put your contact information here!</p>
+    <div class="center">
+        <h2>Wedding Dances</h2>
+        <p>Wedding Dance
+            Choreography...
+            ​
+            BRIDE & GROOM FIRST DANCE
+            ​
+            FATHER OF THE BRIDE
+            ​
+            MOTHER OF THE GROOM
+            ​
+            WEDDING PARTY
+            ​
+            DANCE LESSONS AT THE WEDDING 
+            ​
+            ANY DANCE YOU DESIRE FOR YOUR SPECIAL DAY!!!
+            ​
+            ​
+            Select your Special Song and Come Have Fun Learning your Dances for the Big Day!
+            ​
+            $65/Hour
+            ​
+            Contact Vana Stiller to schedule:
+            (979) 777-6450</p>
   </main>
 
   <footer>
