--- a/weddings.html
+++ b/weddings.html
@@ -23,7 +23,7 @@
   </nav>
 
   <main>
-    <div class="center">
+    <div align="center">
         <h2>Wedding Dances</h2>
         <p>Wedding Dance
             Choreography...
