align home to center

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </nav>
 
   <main>
-    <div class="center">
+    <div align="center">
       <h2>Welcome to Brazos Ballroom Dance Studio!</h2>
       <p>Ready to dance?  Ready to learn to dance?  Looking for a place to dance?  Ready to learn more dances or sharpen your dance skills?
         We are here and ready to teach you !!!  We are here to help you reach your dance goals.</p>
