--- a/calendar.html
+++ b/calendar.html
@@ -29,7 +29,7 @@
   <main>
     <div class="center">
       <h2>Lessons & Special Events</h2>
-      <p>If you want to stay up to date on our upcoming events, sign up for our newsletter!</p>
+      <p>Stay up to date on our upcoming events and lesson schedule!</p>
     </section>
 
   </main>
