--- a/testpage.html
+++ b/testpage.html
@@ -7,18 +7,23 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<div class="banner">
+<body>
+  <div class="banner">
     <div>
         <h1>test</h1>
         <h5>test2</h5>
         <button>test3</button>
     </div>
-</div>
+  </div>
 
-<style>
+  <style>
     .banner {
-        /* image used */
+        width: 100%;
+        height: 100vh; /* Full viewport height */
         background-image: url(https://i.postimg.cc/tTGLyfmZ/360-F-428769564-NB2-T4-JM9-E2xsx-Fd-XXwq-W717-Hwga-Zdp-Aq.jpg);
+        background-size: cover;
+        background-position: center;
     }
-</style>
-
+  </style>
+</body>
+</html>
