--- a/testpage.html
+++ b/testpage.html
@@ -18,8 +18,8 @@
 
   <style>
     .banner {
-        width: 100%;
-        height: 100vh; /* Full viewport height */
+        width: 100vw;
+        height: 50%; /* Full viewport height */
         background-image: url(https://i.postimg.cc/tTGLyfmZ/360-F-428769564-NB2-T4-JM9-E2xsx-Fd-XXwq-W717-Hwga-Zdp-Aq.jpg);
         background-size: cover;
         background-position: center;
