--- a/testpage.html
+++ b/testpage.html
@@ -3,8 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weddings</title>
+  <title>testpage</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    body, html {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+    }
+    .banner {
+        width: 100vw;
+        height: 50vh; /* 50% of the viewport height */
+        background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
+        background-size: cover;
+        background-position: center;
+    }
+  </style>
 </head>
 
 <body>
@@ -15,15 +30,5 @@
         <button>test3</button>
     </div>
   </div>
-
-  <style>
-    .banner {
-        width: 100vw;
-        height: 50%; /* Full viewport height */
-        background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
-        background-size: cover;
-        background-position: center;
-    }
-  </style>
 </body>
 </html>
