--- a/testpage.html
+++ b/testpage.html
@@ -18,6 +18,9 @@
         background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
         background-size: cover;
         background-position: center;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
   </style>
 </head>
