--- a/calendar.html
+++ b/calendar.html
@@ -9,6 +9,22 @@
     text-align: center;
     border: 3px solid green;
   }
+  body, html {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+    }
+    .banner {
+        width: 100vw;
+        height: 50vh; /* 50% of the viewport height */
+        background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
+        background-size: cover;
+        background-position: center;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
   </style>
 </head>
 <body>
