--- a/calendar.html
+++ b/calendar.html
@@ -28,6 +28,7 @@
   </style>
 </head>
 <body>
+  <div class="banner">
   <header>
     <h1>Calendar</h1>
     <nav>
@@ -41,6 +42,7 @@
         <button onclick="location.href='contact.html'">Contact</button>
       </nav>
   </header>
+  </div>
 
   <main>
     <div class="center">
