--- a/calendar.html
+++ b/calendar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calendar</title>
+  <title>Calendar - Lessons and Parties</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <style>.center {
     text-align: center;
@@ -21,7 +21,7 @@
         background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
         background-size: cover;
         background-position: center;
-        position: absolute;
+        position: relative; /* Changed from absolute to relative */
         top: 0;
         left: 0;
     }
@@ -30,7 +30,7 @@
 <body>
   <div class="banner">
   <header>
-    <h1>Calendar</h1>
+    <h1>Lesson plans and event list</h1>
     <nav>
         <button onclick="location.href='index.html'">Home</button>
         <button onclick="location.href='about.html'">About</button>
@@ -48,8 +48,7 @@
     <div class="center">
       <h2>Lessons & Special Events</h2>
       <p>Stay up to date on our upcoming events and lesson schedule!</p>
-    </section>
-
+    </div>
   </main>
 
   <div align="center">
