--- a/calendar.html
+++ b/calendar.html
@@ -17,7 +17,7 @@
     }
     .banner {
         width: 100vw;
-        height: 50vh; /* 50% of the viewport height */
+        height: 25vh; /* % of the viewport height */
         background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
         background-size: cover;
         background-position: center;
