--- a/calendar.html
+++ b/calendar.html
@@ -5,33 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calendar - Lessons and Parties</title>
   <link rel="stylesheet" href="assets/css/style.css">
-  <style>.center {
-    text-align: center;
-    border: 3px solid green;
-  }
-  body, html {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
+  <style>
+    .center {
+      text-align: center;
+      border: 3px solid green;
+    }
+    body, html {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
     }
     .banner {
-        width: 100vw;
-        height: 25vh; /* % of the viewport height */
-        background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
-        background-size: cover;
-        background-position: center;
-        position: relative; /* Changed from absolute to relative */
-        top: 0;
-        left: 0;
+      width: 100vw;
+      height: 25vh; /* 25% of the viewport height */
+      background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
+      background-size: cover;
+      background-position: center;
+      position: relative;
+      top: 0;
+      left: 0;
     }
   </style>
 </head>
 <body>
   <div class="banner">
-  <header>
-    <h1>Lesson plans and event list</h1>
-    <nav>
+    <header>
+      <h1>Lesson plans and event list</h1>
+      <nav>
         <button onclick="location.href='index.html'">Home</button>
         <button onclick="location.href='about.html'">About</button>
         <button onclick="location.href='ballroomdancing.html'">Ballroom Dancing</button>
@@ -41,7 +42,7 @@
         <button onclick="location.href='dancefitness.html'">Dance Fitness</button>
         <button onclick="location.href='contact.html'">Contact</button>
       </nav>
-  </header>
+    </header>
   </div>
 
   <main>
@@ -52,7 +53,7 @@
   </main>
 
   <div align="center">
-  <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=1&ctz=UTC&showPrint=0&title=Test&src=amFzb25zdGV3YXJ0MzY1QGdtYWlsLmNvbQ&color=%23039BE5" style="border:solid 1px #777" width="1000" height="800" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=1&ctz=UTC&showPrint=0&title=Test&src=amFzb25zdGV3YXJ0MzY1QGdtYWlsLmNvbQ&color=%23039BE5" style="border:solid 1px #777" width="1000" height="800" frameborder="0" scrolling="no"></iframe>
   </div>
 
   <footer>
