--- a/calendar.html
+++ b/calendar.html
@@ -22,9 +22,12 @@
       background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
       background-size: cover;
       background-position: center;
-      position: relative;
+      position: fixed; /* Changed to fixed */
       top: 0;
       left: 0;
+    }
+    .content {
+      padding-top: 25vh; /* Add padding to avoid content being hidden behind the banner */
     }
   </style>
 </head>
@@ -45,7 +48,7 @@
     </header>
   </div>
 
-  <main>
+  <main class="content">
     <div class="center">
       <h2>Lessons & Special Events</h2>
       <p>Stay up to date on our upcoming events and lesson schedule!</p>
