added banner to homepage

--- a/index.html
+++ b/index.html
@@ -5,6 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brazos Ballroom Dance - Home</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    .center {
+      text-align: center;
+      border: 3px solid green;
+    }
+    body, html {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
+    .banner {
+      width: 100vw;
+      height: 25vh; /* 25% of the viewport height */
+      background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
+      background-size: cover;
+      background-position: center;
+      position: fixed; /* Changed to fixed */
+      top: 0;
+      left: 0;
+    }
+    .content {
+      padding-top: 25vh; /* Add padding to avoid content being hidden behind the banner */
+    }
+  </style>
 </head>
 <body>
   <header>
