--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>Brazos Ballroom Dance</h1>
-  </header>
+  <div class="banner">
+    <header>
+      <h1>Brazos Ballroom Dance</h1>
+    </header>
+  </div>
 
-  <nav>
+  <nav class="content">
     <button onclick="location.href='index.html'">Home</button>
     <button onclick="location.href='about.html'">About</button>
     <button onclick="location.href='ballroomdancing.html'">Ballroom Dancing</button>
@@ -46,10 +48,9 @@
     <button onclick="location.href='dancefitness.html'">Dance Fitness</button>
     <button onclick="location.href='contact.html'">Contact</button>
     <button onclick="location.href='testpage.html'">testpage</button>
-
   </nav>
 
-  <main>
+  <main class="content">
     <div align="center">
       <h2>Welcome to Brazos Ballroom Dance Studio!</h2>
       <p>Ready to dance?  Ready to learn to dance?  Looking for a place to dance?  Ready to learn more dances or sharpen your dance skills?
@@ -70,8 +71,7 @@
         www.brazosballroomdance.com</p>
 
       <p>We teach Private and Group Lessons.  We host Dance Practice Parties and Dance Showcases. Want to be a competitive dancer?  Sign up now and set your goals into ACTION! </p>
-    </section>
-
+    </div>
   </main>
 
   <footer>
