moved nav buttons into banner

--- a/index.html
+++ b/index.html
@@ -35,33 +35,32 @@
   <div class="banner">
     <header>
       <h1>Brazos Ballroom Dance</h1>
+      <nav>
+        <button onclick="location.href='index.html'">Home</button>
+        <button onclick="location.href='about.html'">About</button>
+        <button onclick="location.href='ballroomdancing.html'">Ballroom Dancing</button>
+        <button onclick="location.href='calendar.html'">Calendar</button>
+        <button onclick="location.href='weddings.html'">Weddings</button>
+        <button onclick="location.href='essentricstretch.html'">Essentric Stretch Classes</button>
+        <button onclick="location.href='dancefitness.html'">Dance Fitness</button>
+        <button onclick="location.href='contact.html'">Contact</button>
+        <button onclick="location.href='testpage.html'">testpage</button>
+      </nav>
     </header>
   </div>
-
-  <nav class="content">
-    <button onclick="location.href='index.html'">Home</button>
-    <button onclick="location.href='about.html'">About</button>
-    <button onclick="location.href='ballroomdancing.html'">Ballroom Dancing</button>
-    <button onclick="location.href='calendar.html'">Calendar</button>
-    <button onclick="location.href='weddings.html'">Weddings</button>
-    <button onclick="location.href='essentricstretch.html'">Essentric Stretch Classes</button>
-    <button onclick="location.href='dancefitness.html'">Dance Fitness</button>
-    <button onclick="location.href='contact.html'">Contact</button>
-    <button onclick="location.href='testpage.html'">testpage</button>
-  </nav>
 
   <main class="content">
     <div align="center">
       <h2>Welcome to Brazos Ballroom Dance Studio!</h2>
-      <p>Ready to dance?  Ready to learn to dance?  Looking for a place to dance?  Ready to learn more dances or sharpen your dance skills?
-        We are here and ready to teach you !!!  We are here to help you reach your dance goals.</p>
+      <p>Ready to dance? Ready to learn to dance? Looking for a place to dance? Ready to learn more dances or sharpen your dance skills?
+        We are here and ready to teach you !!! We are here to help you reach your dance goals.</p>
       
       <h2>Learn to Dance:</h2>
-      <p>Country Western Polka, Two Step, Triple Step, Half Step,Cha Cha, Salsa, Mambo, Tango, Waltz, Foxtrot, Viennese Waltz, Quick Step, Hustle, Merengue, Bachata, Kizomba, Bolero, Rumba, Paso Doble, Swing, Jive, East Coast Swing, West Coast Swing, Samba, 
+      <p>Country Western Polka, Two Step, Triple Step, Half Step, Cha Cha, Salsa, Mambo, Tango, Waltz, Foxtrot, Viennese Waltz, Quick Step, Hustle, Merengue, Bachata, Kizomba, Bolero, Rumba, Paso Doble, Swing, Jive, East Coast Swing, West Coast Swing, Samba, 
         Wedding Dances and All First Dance & Wedding Party Choreography...and MORE....!!!</p>
 
       <h2>COME GET HEALTHY!!</h2>
-      <p>Essentrics with Shelly &  Jonelle
+      <p>Essentrics with Shelly & Jonelle
         Increase STRENGTH, FITNESS, BALANCE, FLEXIBILITY & JOINT HEALTH
         An Innovative Way to Exercise!!!</p>
 
@@ -70,7 +69,7 @@
         College Station, Texas 77845
         www.brazosballroomdance.com</p>
 
-      <p>We teach Private and Group Lessons.  We host Dance Practice Parties and Dance Showcases. Want to be a competitive dancer?  Sign up now and set your goals into ACTION! </p>
+      <p>We teach Private and Group Lessons. We host Dance Practice Parties and Dance Showcases. Want to be a competitive dancer? Sign up now and set your goals into ACTION! </p>
     </div>
   </main>
 
