changed banner to relative

--- a/calendar.html
+++ b/calendar.html
@@ -22,7 +22,7 @@
       background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
       background-size: cover;
       background-position: center;
-      position: fixed; /* Changed to fixed */
+      position: relative; /* Changed to relative */
       top: 0;
       left: 0;
     }
@@ -56,7 +56,8 @@
   </main>
 
   <div align="center">
-    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=1&ctz=America%2FChicago&showPrint=0&showTitle=0&src=amFzb25zdGV3YXJ0MzY1QGdtYWlsLmNvbQ&color=%23039BE5" style="border:solid 1px #777" width="1000" height="800" frameborder="0" scrolling="no"></iframe>  </div>
+    <iframe src="https://calendar.google.com/calendar/embed?height=800&wkst=1&ctz=America%2FChicago&showPrint=0&showTitle=0&src=amFzb25zdGV3YXJ0MzY1QGdtYWlsLmNvbQ&color=%23039BE5" style="border:solid 1px #777" width="1000" height="800" frameborder="0" scrolling="no"></iframe>
+  </div>
 
   <footer>
     <p>&copy; 2025 Brazos Ballroom Dance</p>
