test length of page

--- a/index.html
+++ b/index.html
@@ -69,7 +69,58 @@
         College Station, Texas 77845
         www.brazosballroomdance.com</p>
 
-      <p>We teach Private and Group Lessons. We host Dance Practice Parties and Dance Showcases. Want to be a competitive dancer? Sign up now and set your goals into ACTION! </p>
+      <h2>FILLER</h2>
+      <p>
+      <p>We teach Private and Group Lessons.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        We host Dance Practice Parties and Dance Showcases.
+        Want to be a competitive dancer? Sign up now and set your goals into ACTION! </p>
     </div>
   </main>
 
