--- a/index.html
+++ b/index.html
@@ -22,13 +22,11 @@
       background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
       background-size: cover;
       background-position: center;
-      position: fixed; /* Changed to fixed */
+      position: relative; /* Changed to relative */
       top: 0;
       left: 0;
     }
-    .content {
-      padding-top: 25vh; /* Add padding to avoid content being hidden behind the banner */
-    }
+
   </style>
 </head>
 <body>
