what does this do?

--- a/calendar.html
+++ b/calendar.html
@@ -22,11 +22,11 @@
       background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
       background-size: cover;
       background-position: center;
-      position: relative; /* Changed to relative */
+      position: absolute; /* Changed to relative */
       top: 0;
       left: 0;
     }
-    
+
   </style>
 </head>
 <body>
