--- a/calendar.html
+++ b/calendar.html
@@ -22,7 +22,7 @@
       background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
       background-size: cover;
       background-position: center;
-      position: absolute; /* Changed to relative */
+      position: relative; /* Changed to relative */
       top: 0;
       left: 0;
     }
